updated readme, walkthrough demo, screenshot of the app

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,24 +1,64 @@
-<!-- Starter file provided by Instructor (06/08/2021) AC -->
-
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Team</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="https://kit.fontawesome.com/c502137733.js"></script>
-</head>
-
-<body>
-    <header>
-        <h1>My Team</h1>
-    </header>
-    <div>
-        {{ team }}
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <title>Team Profile</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-dark bg-dark mb-5">
+            <span class="navbar-brand mb-0 h1 w-100 text-center">Team Profile</span>
+        </nav>
+        <div class="container">
+            <div class="row"><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">henry<br /><br />Intern</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 25421</li>
+                <li class="list-group-item">Email Address: henrymorgan@yahoo.com</li>
+                <li class="list-group-item">School: uncc</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">franck<br /><br />Intern</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 25401</li>
+                <li class="list-group-item">Email Address: franckh@yahoo.com</li>
+                <li class="list-group-item">School: cpcc</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">gregory<br /><br />Intern</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 25412</li>
+                <li class="list-group-item">Email Address: gregoryt@yahoo.com</li>
+                <li class="list-group-item">School: cpcc</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">laurent<br /><br />Intern</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 25403</li>
+                <li class="list-group-item">Email Address: laurentr@gmail.com</li>
+                <li class="list-group-item">School: uncc</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">francois<br /><br />Manager</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 25405</li>
+                <li class="list-group-item">Email Address: francois@gmail.com</li>
+                <li class="list-group-item">Office Phone: 72084253612</li>
+            </ul>
+            </div>
+        </div> </div>
     </div>
+    
 </body>
-
 </html>
